--- a/code/index.html
+++ b/code/index.html
@@ -38,10 +38,10 @@
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
+                <button type="button" class="navbar-toggle" style="border:none" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span><i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand" href="#page-top">JJ</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -71,9 +71,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile.png" alt="">
+
+                    <div style="display: block;background: #656CCA;-moz-border-radius: 20px;-webkit-border-radius: 20px;background-image: url(no.png);background-position:50% 50%;background-repeat:no-r;border-radius: 100%;height: 350px;width: 100%;">
+
+                        <img class="img-responsive" src="img/Camera.svg" alt="" style="width: 50%;top: 32%;position: relative;">
+                        <input type="file" upload="file" multiple="" class="MultiFile-applied" name="image" value="" onchange="uploadFile(this);" style=position:absolute;height:100%;width:100%;opacity:0;top:0;"></div>
                     <div class="intro-text">
-                        <span class="name">Start Bootstrap</span>
+                        <span class="name">JJ</span>
                         <hr class="star-light">
                         <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
                     </div>
@@ -530,6 +534,8 @@
 
     <!-- Theme JavaScript -->
     <script src="js/freelancer.min.js"></script>
+    <script src="js/app/app.js"></script>
+
 
 </body>
 
